--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-clh96imf27hc739pieag-a.oregon-postgres.render.com:5432/database_name
+spring.datasource.url=jdbc:postgresql://dpg-clh96imf27hc739pieag-a.oregon-postgres.render.com:5432/database_render_patterns_dms
 spring.datasource.username= username generated in render after creating the PostgreSQL
 spring.datasource.password= username generated in render after creating the PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
