--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 server.tomcat.accesslog.enabled=true
-spring.profiles.active=dev
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://dpg-clh96imf27hc739pieag-a.oregon-postgres.render.com:5432/database_render_patterns_dms
-spring.datasource.username= username generated in render after creating the PostgreSQL
-spring.datasource.password= username generated in render after creating the PostgreSQL
+spring.datasource.username= database_render_patterns_dms_qo43_user
+spring.datasource.password= kYQbhBGMNr2RYcoAc0uaJfFwKjnKSmzV
 spring.datasource.driver-class-name=org.postgresql.Driver
 
